# simpledb

./: .gitmodules  CMakeLists.txt  LICENSE
cmake/: dep.cmake  util.cmake
simpledb/: CMakeLists.txt
simpledb/core/: db.cc  db.h  io.cc  io.h
simpledb/util/: CMakeLists.txt  util.h
test/: CMakeLists.txt  io.cc  large_file.cc  main.cc
